Fix collapsed table layout

--- a/src/styles/namespaces/BlogShow/Markdown.scss
+++ b/src/styles/namespaces/BlogShow/Markdown.scss
@@ -42,7 +42,7 @@
       display: block;
       width: 100%;
       overflow: auto;
-      word-break: keep-all;
+      word-break: break-word;
       border-collapse: collapse;
       -webkit-overflow-scrolling: touch;
 
@@ -65,6 +65,7 @@
 
         td, th, tr {
           padding: 8px;
+          min-width: 120px;
           border: 1.5px solid #bbbbbb;
           font-size: 1.1rem;
         }
